fix z-index in navbar and optimization scroll color nav

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -2,6 +2,7 @@
 
 .header{
   position: fixed;
+  z-index: 1;
   top: 0;
   width: 100%;
   opacity: 1;
